[gd_scene load_steps=7 format=3 uid="uid://cgs4l6rmxjr3v"]

[ext_resource type="Script" path="res://construction_mechanic/player_building.gd" id="1_0ehik"]
[ext_resource type="PackedScene" uid="uid://dupfmq1l5v3gx" path="res://experimental/example_body_b.tscn" id="2_gk61n"]
[ext_resource type="Material" uid="uid://hhliwspm43bx" path="res://experimental/grid_material.tres" id="2_htgcx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t6rjh"]
albedo_color = Color(1, 1, 0.423529, 1)

[sub_resource type="PrismMesh" id="PrismMesh_wvtgx"]
material = SubResource("StandardMaterial3D_t6rjh")
size = Vector3(0.6, 0.6, 0.4)

[sub_resource type="Environment" id="Environment_27voy"]
background_mode = 1
background_color = Color(0.215714, 0.269976, 0.450067, 1)
background_energy_multiplier = 0.5
ambient_light_source = 2
ambient_light_color = Color(0.935113, 0.605966, 0.784138, 1)
ambient_light_energy = 2.0
tonemap_white = 0.5
glow_enabled = true
glow_intensity = 1.89
glow_bloom = 0.16

[node name="PlayerBuilding" type="Node3D"]
script = ExtResource("1_0ehik")

[node name="ObjectHolder" type="Node3D" parent="."]

[node name="ExampleBodyB" parent="ObjectHolder" instance=ExtResource("2_gk61n")]

[node name="Mesh" parent="ObjectHolder/ExampleBodyB" index="0"]
surface_material_override/0 = ExtResource("2_htgcx")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="ColisionPreview" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
mesh = SubResource("PrismMesh_wvtgx")
skeleton = NodePath("")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
environment = SubResource("Environment_27voy")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -10)
collision_mask = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="ObjectHolder/ExampleBodyB"]
